--- a/draft/client2.html
+++ b/draft/client2.html
@@ -4,40 +4,35 @@
   <meta charset="UTF-8" />
   <title>Family ICQ MVP</title>
   <style>
-    body { font-family: sans-serif; margin: 0; display: flex; height: 100vh; }
-    #sidebar { width: 200px; border-right: 1px solid #ccc; padding: 10px; }
-    #chatBox { flex: 1; display: flex; flex-direction: column; }
-    #chat { flex: 1; border-bottom: 1px solid #ccc; overflow-y: auto; padding: 10px; }
+    body { font-family: sans-serif; margin: 20px; display: flex; gap: 20px; }
+    #contacts { width: 200px; border: 1px solid #ccc; padding: 10px; }
+    #chatArea { flex: 1; }
+    #chat { border: 1px solid #ccc; height: 300px; overflow-y: auto; padding: 10px; }
     .msg { margin: 5px 0; }
     .me { color: blue; }
     .other { color: green; }
-    .contact { padding: 5px; cursor: pointer; }
+    .contact { cursor: pointer; margin: 5px 0; }
     .contact:hover { background: #eee; }
-    #auth { padding: 20px; }
   </style>
 </head>
 <body>
   <div id="auth">
-    <h2>Family Chat Login</h2>
-    <input id="username" placeholder="Username" /><br><br>
-    <input id="password" type="password" placeholder="Password" /><br><br>
+    <input id="username" placeholder="Username" />
+    <input id="password" type="password" placeholder="Password" />
     <button onclick="register()">Register</button>
     <button onclick="login()">Login</button>
   </div>
 
-  <div id="main" style="display:none; width:100%; height:100%; display:flex;">
-    <div id="sidebar">
+  <div id="app" style="display:none; width:100%;">
+    <div id="contacts">
       <h3>Contacts</h3>
-      <div id="contacts"></div>
+      <div id="contactList"></div>
     </div>
-
-    <div id="chatBox">
-      <h3 id="chatTitle">Select a contact</h3>
+    <div id="chatArea">
+      <h3 id="chatTitle">Chat</h3>
       <div id="chat"></div>
-      <div style="padding: 10px;">
-        <input id="msgInput" placeholder="Type message..." style="width:70%;" />
-        <button onclick="sendMsg()">Send</button>
-      </div>
+      <input id="msgInput" placeholder="Type message..." onkeypress="if(event.key==='Enter'){sendMsg()}"/>
+      <button onclick="sendMsg()">Send</button>
     </div>
   </div>
 
@@ -45,13 +40,12 @@
     let token = null;
     let ws = null;
     let chatId = null;
-    let currentUser = null;
-    let selectedContact = null;
+    let me = null;
 
     async function register() {
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
-      const res = await fetch("http://localhost:8000/register", {
+      const res = await fetch("http://0.0.0.0:8000/auth/sign-up", {
         method: "POST",
         headers: {"Content-Type": "application/json"},
         body: JSON.stringify({username, password})
@@ -62,7 +56,7 @@
     async function login() {
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
-      const res = await fetch("http://localhost:8000/login", {
+      const res = await fetch("http://0.0.0.0:8000/auth/sign-in", {
         method: "POST",
         headers: {"Content-Type": "application/json"},
         body: JSON.stringify({username, password})
@@ -71,89 +65,90 @@
       token = data.access_token;
       if (token) {
         document.getElementById("auth").style.display = "none";
-        document.getElementById("main").style.display = "flex";
-        await loadMe();
-        await loadContacts();
+        document.getElementById("app").style.display = "flex";
+
+        // load current user
+        const r = await fetch("http://0.0.0.0:8000/current-user", {
+          headers: {Authorization: "Bearer " + token}
+        });
+        me = await r.json();
+
+        loadContacts();
       }
     }
 
-    async function loadMe() {
-      const res = await fetch("http://localhost:8000/me", {
-        headers: {Authorization: "Bearer " + token}
-      });
-      currentUser = await res.json();
-    }
-
     async function loadContacts() {
-      const res = await fetch("http://localhost:8000/users", {
+      const res = await fetch("http://0.0.0.0:8000/users/full-list", {
         headers: {Authorization: "Bearer " + token}
       });
       const users = await res.json();
-      const container = document.getElementById("contacts");
-      container.innerHTML = "";
-      users.filter(u => u.id !== currentUser.id).forEach(u => {
+      const list = document.getElementById("contactList");
+      list.innerHTML = "";
+      users.filter(u => u.id !== me.id).forEach(u => {
         const div = document.createElement("div");
         div.className = "contact";
-        div.innerText = u.username;
-        div.onclick = () => openChat(u);
-        container.appendChild(div);
+        div.textContent = u.username;
+        div.onclick = () => startChat(u);
+        list.appendChild(div);
       });
     }
 
-    async function openChat(contact) {
-      selectedContact = contact;
-      document.getElementById("chatTitle").innerText = "Chat with " + contact.username;
+    async function startChat(user) {
+      document.getElementById("chatTitle").textContent = "Chat with " + user.username;
       document.getElementById("chat").innerHTML = "";
 
-      // проверим, есть ли чат
-      let res = await fetch("http://localhost:8000/chats", {
+      // 1) получаем все мои чаты
+      const resChats = await fetch("http://0.0.0.0:8000/chats/", {
         headers: {Authorization: "Bearer " + token}
       });
-      let chats = await res.json();
-      let existing = chats.find(c => c.members.includes(contact.id));
-      if (existing) {
-        chatId = existing.chat_id;
-      } else {
-        res = await fetch("http://localhost:8000/chats", {
+      const chats = await resChats.json();
+
+      // 2) ищем приватный чат с этим пользователем
+      let chat = chats.find(c => !c.is_group && c.members.some(m => m.user_id === user.id));
+
+      // 3) если чата нет — создаём
+      if (!chat) {
+        const res = await fetch("http://0.0.0.0:8000/chats/", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
             Authorization: "Bearer " + token
           },
-          body: JSON.stringify({member_ids:[contact.id], is_group:false})
+          body: JSON.stringify({member_ids:[user.id], is_group:false})
         });
-        const c = await res.json();
-        chatId = c.chat_id;
+        chat = await res.json();
       }
 
-      // подключение WS
-      if (ws) ws.close();
-      ws = new WebSocket(`ws://localhost:8000/ws/chats/${chatId}?token=${token}`);
-      ws.onmessage = (e) => {
-        const data = JSON.parse(e.data);
-        const div = document.createElement("div");
-        div.className = "msg";
-        div.innerHTML = `<span class="${data.sender_id==currentUser.id?'me':'other'}">${data.sender}: </span>${data.content}`;
-        document.getElementById("chat").appendChild(div);
-      };
+      chatId = chat.id || chat.chat_id;
 
-      // загрузка истории
-      res = await fetch(`http://localhost:8000/chats/${chatId}/messages`, {
+      // грузим историю сообщений
+      const resMsgs = await fetch(`http://0.0.0.0:8000/chats/${chatId}/messages`, {
         headers: {Authorization: "Bearer " + token}
       });
-      const history = await res.json();
-      history.forEach(m => {
-        const div = document.createElement("div");
-        div.className = "msg";
-        div.innerHTML = `<span class="${m.sender_id==currentUser.id?'me':'other'}">${m.sender}: </span>${m.content}`;
-        document.getElementById("chat").appendChild(div);
-      });
+      const msgs = await resMsgs.json();
+      msgs.forEach(m => renderMsg(m.sender_id, m.sender || m.sender_id, m.content));
+
+      // подключаемся к WebSocket
+      if (ws) ws.close();
+      ws = new WebSocket(`ws://0.0.0.0:8000/ws/chats/${chatId}?token=${token}`);
+      ws.onmessage = (e) => {
+        const data = JSON.parse(e.data);
+        renderMsg(data.sender_id, data.sender, data.content);
+      };
+    }
+
+    function renderMsg(senderId, senderName, content) {
+      const div = document.createElement("div");
+      div.className = "msg";
+      div.innerHTML = `<span class="${senderId==me.id?'me':'other'}">${senderName}: </span>${content}`;
+      document.getElementById("chat").appendChild(div);
+      document.getElementById("chat").scrollTop = document.getElementById("chat").scrollHeight;
     }
 
     function sendMsg() {
       const msg = document.getElementById("msgInput").value;
-      if (ws && msg) {
-        ws.send(msg);
+      if (ws && msg.trim()) {
+        ws.send(JSON.stringify({content: msg}));
         document.getElementById("msgInput").value = "";
       }
     }
